Added /kill endpoint for test automation purposes. Some refactoring.
